# Commodus

./: .gitignore  NU_course_data.json  NU_course_schedule_feb_2_2026.json  README.md  index.html  io.github.Epoch5427.Commodus.json  meson.build
.github/workflows/: publish-repo.yml
c++/: meson.build  scheduler.cpp
data/: io.github.Epoch5427.Commodus.desktop.in  io.github.Epoch5427.Commodus.gschema.xml  io.github.Epoch5427.Commodus.metainfo.xml.in  io.github.Epoch5427.Commodus.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
repo/: summary  summary.idx  summary.idx.sig  summary.sig
repo/refs/heads/appstream/: x86_64
repo/summaries/: 08f0ae4eebb82a506d760887892cdd7e4ca5c31880dd201dc5357f9885db7814-9133b06a1151a11d6b8bdb114ec4a2018551971d98255a12c03907b2c685f545.delta  0e5d500a8d49398e3b24481a8b2d0ba3ff332db268e9cc32737bd5285088c5c4-9133b06a1151a11d6b8bdb114ec4a2018551971d98255a12c03907b2c685f545.delta  0e5d500a8d49398e3b24481a8b2d0ba3ff332db268e9cc32737bd5285088c5c4-95b1eff3db5ec856af174d0d9a32366882d044631ad9d818b676a384924c2d37.delta  0e5d500a8d49398e3b24481a8b2d0ba3ff332db268e9cc32737bd5285088c5c4-fd988dd0d7fc34a8d799ffbfb9e472acd7b32e43d90e8df5682b9cb3ec32f217.delta  16f30cb5e63707c58a61047fff1cdb6c317884a51ed86ed1fb985891cdca7df4-3a79029e7690dee4a68d39c6c88243ce9a5aca6892c87ba04a8617645c4dabdc.delta  1a97ac9c7ad8a6cf4b1b712594439075116942faef549456a75056e2562d32dd-3a79029e7690dee4a68d39c6c88243ce9a5aca6892c87ba04a8617645c4dabdc.delta  2a550e6db7ebaddc79bff535d1a7904543fc835fd14911caf9f13591441ae3fa-1c6e58f17086d5b620526a779ba65d59cb51f2aee98b3b1443595d498a7a074b.delta  (+43 more)
src/: commodus.gresource.xml  commodus.in  main.py  meson.build  shortcuts-dialog.ui  window.blp  window.py
(+3 files in other folders)
